# Changelog

## [1.1.0] - 2025-10-04

Second version, with added quality of life features and radio controls.
TODO:

### Added
- Added live spectrum movement interactions arrows, f, r, +, -, refresh rate, c, x, i, o.
- Added attack/decay of spectrum values

- Added animation symbol and color solution
- Added Deb package building for future apt-get package, follow debian policy
- Added example sweeping rtl-sdr 
- Added soupy-sdr controls
- Added iqfile mode and example
- Added modular parse/protocols and example, can now add your own parser of data
- Added documentation about creation of parsing-modules

### Changed
- Set min-max db per default
- Updated link to release in readme file

## [1.0.0] - 2025-10-01

First notable version, ready for deployment and evaluation.

### Added
- Terminal-based spectrum and waterfall display
- Support for VITA-49, raw IQ, and simulated streams
- Auto-zoom to signal regions
- Bar and line mode spectrum
- Optional saving/loading of IQ data
