@@ -8,13 +8,14 @@ TODO:
 ### Added
 - Added live spectrum movement interactions arrows, f, r, +, -, refresh rate, c, x, i, o.
 - Added attack/decay of spectrum values
+- Added modular parse/input modules, updated readme
+
 
 - Added animation symbol and color solution
 - Added Deb package building for future apt-get package, follow debian policy
 - Added example sweeping rtl-sdr 
 - Added soupy-sdr controls
 - Added iqfile mode and example
-- Added modular parse/protocols and example, can now add your own parser of data
 - Added documentation about creation of parsing-modules
 
 ### Changed
